--- a/MediaPlayerDemo/Views/Shared/_Layout.cshtml
+++ b/MediaPlayerDemo/Views/Shared/_Layout.cshtml
@@ -34,6 +34,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Inicio", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Basic Usage", "Index", "BasicUsageMediaPlayer")</li>
                     <li>@Html.ActionLink("Acerca de", "About", "Home")</li>
                     <li>@Html.ActionLink("Contacto", "Contact", "Home")</li>
                 </ul>
