--- a/MediaPlayerDemo/Views/Shared/_Layout.cshtml
+++ b/MediaPlayerDemo/Views/Shared/_Layout.cshtml
@@ -35,6 +35,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Inicio", "Index", "Home")</li>
                     <li>@Html.ActionLink("Basic Usage", "Index", "BasicUsageMediaPlayer")</li>
+                    <li>@Html.ActionLink("Play List", "Index", "PlayList")</li>
                     <li>@Html.ActionLink("Acerca de", "About", "Home")</li>
                     <li>@Html.ActionLink("Contacto", "Contact", "Home")</li>
                 </ul>
