Se agrego funcionalidad de menu lateral y cuando se selecciona la opcion carga el video correspondiente

--- a/MediaPlayerDemo/Views/PlayList/Index.cshtml
+++ b/MediaPlayerDemo/Views/PlayList/Index.cshtml
@@ -31,6 +31,7 @@
     function onChange() {
         var index = this.select().index();
         var dataItem = this.dataSource.view()[index];
+        console.log(dataItem);
         $("#mediaPlayer").data("kendoMediaPlayer").media(dataItem);
     }
 
