--- a/MediaPlayerDemo/Views/Shared/_Layout.cshtml
+++ b/MediaPlayerDemo/Views/Shared/_Layout.cshtml
@@ -36,6 +36,7 @@
                     <li>@Html.ActionLink("Inicio", "Index", "Home")</li>
                     <li>@Html.ActionLink("Basic Usage", "Index", "BasicUsageMediaPlayer")</li>
                     <li>@Html.ActionLink("Seleccionar Lista Reproducción", "Index", "SelectedPlayList")</li>
+                    <li>@Html.ActionLink("Menu Lateral", "Index", "MenuLatetal")</li>
                     @*<li>@Html.ActionLink("Play List", "Index", "PlayList")</li>*@
                     <li>@Html.ActionLink("Acerca de", "About", "Home")</li>
                     <li>@Html.ActionLink("Contacto", "Contact", "Home")</li>
