Se agrego un TitleLayour para organizar los componentes

--- a/MediaPlayerDemo/Views/SelectedPlayList/Index.cshtml
+++ b/MediaPlayerDemo/Views/SelectedPlayList/Index.cshtml
@@ -15,4 +15,15 @@
         </p>
     </div>
 
+    <div>
+        <h4>Layout</h4>
+        <p>
+
+            @Html.ActionLink("The Strokes", "Index", "LayoutMediaPlayer", new { videos = "theStrokes" }, new { @class = "btn btn-danger" })
+
+            @Html.ActionLink("Telerik", "Index", "LayoutMediaPlayer", new { videos = "telerik" }, new { @class = "btn btn-danger" })
+
+        </p>
+    </div>
+
 </div>
