--- a/MediaPlayerDemo/Views/Shared/_Layout.cshtml
+++ b/MediaPlayerDemo/Views/Shared/_Layout.cshtml
@@ -37,6 +37,7 @@
                     <li>@Html.ActionLink("Basic Usage", "Index", "BasicUsageMediaPlayer")</li>
                     <li>@Html.ActionLink("Seleccionar Lista Reproducción", "Index", "SelectedPlayList")</li>
                     <li>@Html.ActionLink("Menu Lateral", "Index", "MenuLatetal")</li>
+                    @*<li>@Html.ActionLink("Layout", "Index", "LayoutMediaPlayer")</li>*@
                     <li>@Html.ActionLink("Acerca de", "About", "Home")</li>
                     <li>@Html.ActionLink("Contacto", "Contact", "Home")</li>
                 </ul>
