--- a/MediaPlayerDemo/Views/LayoutMediaPlayer/Index.cshtml
+++ b/MediaPlayerDemo/Views/LayoutMediaPlayer/Index.cshtml
@@ -13,8 +13,8 @@
             .Items(treeview =>
             {
                 treeview.Add().Text("Someday");
-                treeview.Add().Text("Under Cover of Darkness"); 
-                treeview.Add().Text("The Adults Are Talking"); 
+                treeview.Add().Text("Under Cover of Darkness");
+                treeview.Add().Text("The Adults Are Talking");
             })
             .DataTextField("title")
             .DataSource(dataSource => dataSource
@@ -26,12 +26,8 @@
         )
 </script>
 
-@*<script id="titulo-video-template" type="text/x-kendo-template">
-                @(Html.Label("TituloVideo", "Titulo Video", new { @id = "tituloVideo" })
-                )
-    </script>*@
-
 <script id="media-player-template" type="text/x-kendo-template">
+
         @(Html.Kendo().MediaPlayer()
             .AutoPlay(true)
             .Navigatable(true)
@@ -39,47 +35,26 @@
                 .Title("The Strokes")
             .Source("https://www.youtube.com/watch?v=_l09H-3zzgA"))
             .Name("mediaPlayer")
-            .HtmlAttributes(new { style = "height:360px" })
+            .HtmlAttributes(new { style = "height:450px" })
             .AutoPlay(false)
             .ToClientTemplate()
             )
 </script>
 
-@*<script id="descripcion-template" type="text/x-kendo-template">
-            @(Html.Kendo().TextArea()
-                .Name("textarea")
-                .Rows(10)
-                //.Events(e => e.Change("onChange"))
-                //.HtmlAttributes(new { style = "width: 100%; color:#ff0000 ; font-size: 15px;" })
-                //.Enable(false)
-                //.Readonly(true)
-                .ToClientTemplate()
-            )
-    </script>*@
 
-
-@*@(Html.Kendo().TileLayout()
-        .Name("tilelayout")
-        .Columns(3)
-        .RowsHeight("500px")
-        .ColumnsWidth("500px")
-        .Containers(c => {
-            c.Add().Header(h => h.Text("Titulo Video")).BodyTemplateId("titulo-video-template").ColSpan(5).RowSpan(1);
-            c.Add().Header(h => h.Text("Tree View")).BodyTemplateId("tree-view-template").ColSpan(1).RowSpan(1);
-            c.Add().Header(h => h.Text("Media Player")).BodyTemplateId("media-player-template").ColSpan(2).RowSpan(1);
-            c.Add().Header(h => h.Text("Descripcion Video")).BodyTemplateId("descripcion-template").ColSpan(3).RowSpan(1);
-        })
-        .Reorderable(true)
-        .Resizable(true)
-    //.Events(e=>e.Resize("onTileResize"))
-    )*@
-
-<div>
-    <h1>
-        @Html.Label("TituloVideo", "Titulo Video", new { @id = "tituloVideo", width = "100%", style = "color:#ff0000" })
+<div style="text-align: center">
+    <h1 style="font-size:600%;">
+        @Html.Label("TituloVideo", "Titulo Video", new { @id = "tituloVideo", width = "100%", style = "color:#ff0000; text-align: center;" })
     </h1>
 </div>
 
+<div style="text-align: right">
+    <h3>
+        @Html.Label("TituloVideo2", "Titulo Video2", new { @id = "tituloVideo2", width = "100%", style = "color:#ff0000; text-align: center;" })
+    </h3>
+</div>
+
+@*<div style="text-align: right; width: 100%">*@
 <div>
 
     @(Html.Kendo().TileLayout()
@@ -91,22 +66,28 @@
             c.Add().Header(h => h.Text("Lista Reproduccion")).BodyTemplateId("tree-view-template").ColSpan(1).RowSpan(1);
             c.Add().Header(h => h.Text("")).BodyTemplateId("media-player-template").ColSpan(2).RowSpan(1);
         })
-        .Reorderable(true)
-        .Resizable(true)
+        .Reorderable(false)
+        .Resizable(false)
     //.Events(e=>e.Resize("onTileResize"))
     )
-</div>
-
-<div>
-    @(Html.Kendo().TextArea()
+    @*@(Html.Kendo().TextArea()
             .Name("textarea")
             .Rows(10)
-            //.Events(e => e.Change("onChange"))
-            .HtmlAttributes(new { style = "width: 100%; color:#ff0000 ; font-size: 15px;" })
-            //.Enable(false)
-            .Readonly(true)
-        )
+        //.Resizable("horizontal")
+        //.Events(e => e.Change("onChange"))
+        .HtmlAttributes(new { style = "width: 100%; color:#ff0000 ; font-size: 20px; text-align: center" })
+        //.Enable(false)
+        //.Readonly(true)
+        )*@
+
 </div>
+
+<div style="width: 80%; text-align: left;">
+        <h3>
+            @Html.Label("descripcionVideo", " ", new { @id = "descripcionVideo", width = "100%", style = "color:#ff0000; text-align: center;" })
+        </h3>
+</div>
+
 
 <script>
     function onSelect(e) {
@@ -119,7 +100,9 @@
             success: function (result) {
                 $("#mediaPlayer").data("kendoMediaPlayer").media({ title: result.titulo, source: result.source });
                 $("#tituloVideo").text(result.titulo);
-                $("#textarea").data("kendoTextArea").value(result.descripcion);
+                $("#tituloVideo2").text(result.titulo);
+                //$("#textarea").data("kendoTextArea").value(result.descripcion);
+                $("#descripcionVideo").text(result.descripcion);
             },
             error: function (emp) {
                console.log("Not OK")
